// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCode should render correctly 1`] = `
<code
  className="bpk-code"
>
  npm install react --save-dev
</code>
`;

exports[`BpkCode should render correctly with "alternate" 1`] = `
<code
  className="bpk-code bpk-code--alternate"
>
  npm install react --save-dev
</code>
`;

exports[`BpkCode should render correctly with custom "className" 1`] = `
<code
  className="bpk-code my-class"
>
  npm install react --save-dev
</code>
`;
